--- a/Screen_Capture/style.css
+++ b/Screen_Capture/style.css
@@ -1,3 +1,9 @@
+*{
+    padding: 0;
+    margin: 0;
+    border: 0;
+}
+
 body{
     display: flex;
     align-items: center;
@@ -60,7 +66,7 @@ body{
 
 .ovo{
     position: absolute;
-    left: auto;
+
 }
 
 .text{
@@ -78,8 +84,8 @@ body{
     position: absolute;
     width: 720px;
     height: 450px;
-    left: 20px;
-    top: 10px;
+    left: 3rem;
+    top: 4rem;
     
     font-family: 'Inter';
     font-style: normal;
@@ -98,10 +104,9 @@ body{
 
 .textLeft{
     position: absolute;
-    width: 777px;
-    height: 561px;
-    left: 100px;
-    top: 0px;
+    width: 45%;
+    height: 100%;
+    left: 5%;
     
     background: #F3410E;
     border-radius: 105px;
@@ -112,8 +117,8 @@ body{
     position: absolute;
     width: 720px;
     height: 450px;
-    left: 20px;
-    top: 10px;
+    left: 3rem;
+    top: 4rem;
     
     font-family: 'Inter';
     font-style: normal;
@@ -148,8 +153,8 @@ body{
     position: absolute;
     width: 500px;
     height: 60px;
-    left: 35px;
-    top: 0px;
+    left: 2vh;
+    top: 3vh;
     
     font-family: 'Inter';
     font-style: normal;
@@ -178,8 +183,8 @@ body{
     position: absolute;
     width: 500px;
     height: 60px;
-    left: 35px;
-    top: 0px;
+    left: 2vh;
+    top: 3vh;
     
     font-family: 'Inter';
     font-style: normal;
